--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu site</title>
+    <style>
+         body {
+            font: normal 20pt Arial;
+            /* Esse comando acima especifica a fonte ( normal ), o tamanho ( 20 pt) e o tipo de letra ( Arial ) */
+
+    </style>
 </head>
 
 <body>
@@ -13,9 +19,78 @@
     <h1>Meu site</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>    
     <h3>Versões : </h3>
-    <h4>0.1 Criação do site e Linha 13 e 14</h4>
+    <h4>0.1 Criação do site : Título e subtítulo </h4>
     <h4>0.2 Alfabeto e teste de alguns códigos</h4>
+    <h5>0.3 Meu nome em 59 idiomas e adicionei a fonte como normal 20 Arial
+    <h6>Meu nome em vários idiomas</h6>
+    <p>1-Américo : ዳንኤል dani’ēli
+    <p>-Árabe : دانيالdanial
+    <p>-Armênio : Դանիել Daniyel
+    <p>-Bengali : ড্যানিয়েল Ḍyāniẏēla
+    <p>5-Bielorusso : Данііл Daniil
+    <p>-Birmanês : ဒံယေလ danyayl
+    <p>-Búlgaro : Даниел
+    <p>-Canarim : ಡೇನಿಯಲ್ Ḍēniyal
+    <p>-Cazaque : Даниэль Danïél
+    <p>10-Chinês ( Simples ) : 丹尼尔 Dānní'ěr
 
+    <p>11-Chinês ( tradicional ) : 丹尼爾 Dānní'ěr
+    <p>-Cingalês : ඩැනියෙල් ḍæniyel
+    <p>-Coreano : 다니엘
+    <p>-Croata : Daniele
+    <p>15-Georgiano : დანიელი Danieli
+    <p>-Grego : Ντάνιελ Ntániel
+-   <p>-Guzerate : ડેનિયલ Ḍēniyala
+    <p>-Haitiano : Danyèl
+    <p>-Hauçá : Daniyel
+    <p>20-Havaiano : ʻO Daniel
+
+    <p>21-Hebraico : דניאל
+    <p>-Híndi : डैनियल dainiyal
+    <p>-Lídiche : דניאל dnyal
+    <p>-Iorubá : Dáníẹ́lì
+    <p>25-Japonês : ダニエル Danieru
+    <p>-Khmer : ដានីយ៉ែល da ni ye l
+    <p>-Laosiano : ດານຽນ da nian
+    <p>-Letão : Daniels
+    <p>-Lituano : Danielius
+    <p>30-Macedônio : Даниел
+
+    <p>31-Malaiala : ഡാനിയേൽ ḍāniyēl
+    <p>-Malgaxe : Daniela
+    <p>-Maori : Raniera
+    <p>-Marati : डॅनियल Ḍĕniyala
+    <p>35-Mongol : Даниел Daniyel
+    <p>-Nepalês : डानियल Ḍāniyala
+    <p>-Oriá = ଦାନିୟେଲ |
+    <p>-Panjabi = ਡੈਨੀਅਲ Ḍainī'ala
+    <p>-Pashto = دانیل
+    <p>40-Persa = دانیل
+
+    <p>41-Quirguiz = Даниел
+    <p>-Russo = Даниэль
+    <p>-Samoano = Tanielu
+-Sérvio = Даниел
+45-Sindi = ڊينئل
+-Somali = Daanyeel
+-Tadijique = Дониёл Donijol
+-Tailandês = แดเนียล Dæ neīy l
+-Tâmil = டேனியல் Ṭēṉiyal
+50-Tártaro = Данил
+
+51-Techo = Danieli
+-Télugo = డేనియల్ Ḍēniyal
+-Ucraniano : Даніель
+-Uigur : دانىيال
+-Urdu : ڈینیل
+55-Uzbeque : Doniyor
+-Xhosa : UDaniel
+-Xona : Dhanieri
+108-Zulu : UDaniel
+109 idiomas Pq eu estava
+traduzindo do Português
+
+    </p>
     <h5>Alfabeto</h5>
     <p>01 -A - あ (01)</p>
     <p></p>"02 -B - "
