--- a/index.html
+++ b/index.html
@@ -21,8 +21,61 @@
     <h3>Versões : </h3>
     <h4>0.1 Criação do site : Título e subtítulo </h4>
     <h4>0.2 Alfabeto e teste de alguns códigos</h4>
-    <h5>0.3 Meu nome em 59 idiomas e adicionei a fonte como normal 20 Arial
+    <h5>0.3 Meu nome em 59 idiomas e adicionei a fonte como normal 20 Arial</h5>
+    <h6>Símbolos Espciais de Planetas e Zodíaco, preciso ver como que da espaço, ta anotado em algum lugar kkkkk </h6>
+
+    <h7>Símbolos Especiais </h7>
+    <p>
+        Planetas : </p>
+        Sol	    &#9737</p>
+	    Mercúrio&#9791</p>
+	    Vênus	&#9792</p>
+	    Terra	&#9793</p>
+	    Marte	&#9794</p>
+	    Júpiter	&#9795</p>
+	    Saturno	&#9796</p>
+	    Urano	&#9797</p>
+      	Netuno	&#9798</p>
+        Plutão	&#9799</p>
+
+        Zodíaco: </p>
+        Áries	&#9800</p>
+        Touro	&#9801</p>
+    	Gêmeos	&#9802</p>
+	    Câncer	&#9803</p>
+	    Leão	&#9804</p>
+	    Virgem	&#9805</p>
+	    Libra	&#9806</p>
+	    Escorpião	&#9807</p>
+	    Sagitário	&#9808</p>
+	    Capricórnio	&#9809</p>
+        Aquário	&#9811</p>
+	    Peixes	&#9810</p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+
     <h6>Meu nome em vários idiomas</h6>
+
     <p>1-Américo : ዳንኤል dani’ēli
     <p>-Árabe : دانيالdanial
     <p>-Armênio : Դանիել Daniyel
