--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 <body>
 
     <h1>Meu site</h1>
-    <h2>Aqui irei postar tudo o que eu faço</h2>    
-    <h3>Versões : </h3>
-    <h4>0.1 Criação do site : Título e subtítulo </h4>
-    <h4>0.2 Alfabeto e teste de alguns códigos</h4>
-    <h5>0.3 Meu nome em 59 idiomas e adicionei a fonte como normal 20 Arial</h5>
-    <h6>Símbolos Espciais de Planetas e Zodíaco, preciso ver como que da espaço, ta anotado em algum lugar kkkkk </h6>
+    <h2>Aqui irei postar tudo o que eu faço</h2>
+    <h3>Futuramente irei colocar tudo em links</h3>
 
-    <h7>Símbolos Especiais </h7>
+    <h4>Versões : </h4>
+    <h5>0.1 Criação do site : Título e subtítulo </h5>
+    <h5>0.2 Alfabeto e teste de alguns códigos</h5>
+    <h5>0.3 Meu nome em 59 idiomas e adicionei a fonte como normal 20 Arial</h5>
+    <h5>0.4 Símbolos Espciais de Planetas , Zodíaco e subtítulo 4 avisando que futuramente vai mudar, preciso ver como que da espaço, ta anotado em algum lugar kkkkk </h5>
+
+    <h8>Símbolos Especiais </h8>
     <p>
         Planetas : </p>
         Sol	    &#9737</p>
@@ -74,7 +76,7 @@
     <p></p>
     <p></p>
 
-    <h6>Meu nome em vários idiomas</h6>
+    <h9>Meu nome em vários idiomas</h9>
 
     <p>1-Américo : ዳንኤል dani’ēli
     <p>-Árabe : دانيالdanial
@@ -144,7 +146,7 @@
 traduzindo do Português
 
     </p>
-    <h5>Alfabeto</h5>
+    <h10>Alfabeto</h10>
     <p>01 -A - あ (01)</p>
     <p></p>"02 -B - "
     <p></p>03 -C -
