--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>Meu site</title>
     <style>
         body{background-color: rgb(169, 228, 178)
@@ -25,45 +25,57 @@
 
 <body>
 
-    <h1 align="center">Meu site</h1>
+    <h1 align="center">Meu site &#x1F604;</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>
     <h3>Futuramente irei colocar tudo em links</h3>
 
-    <h4>Versões : </h4>
-    <h5>0.1 Criação do site : Título e subtítulo </h5><br>
-    <h6>0.2 Alfabeto e teste de alguns códigos</h6><br>
-    <h7>0.3 Meu nome em 59 idiomas e adicionei a fonte como normal 20 Arial</h7><br>
-    <h8>0.4 Símbolos Espciais de Planetas , Zodíaco e subtítulo.<br>Avisando que futuramente vai mudar, preciso ver como que da espaço, ta anotado em algum lugar kkkkk </h8><br>
-    <h9>0.5 Coloquei pro título : família da fonte, tamanho, cor e sombreamento, pra página uma cor de fundo.<br>Alguns comandos não funcionam e o site ta mto lagado</h9><br>
-    <h10>0.6 Adicionei cor para Parágrafos, Alinhamento para Parágros e Título, Identação e Pular linha <br>Eu não sei porque a 0.1 e 0.2 estão com um espaçamento enorme se ambas estão com h3 h4 e h5 </h10><br> Eu removi o excesso de linhas tb
+    <h4>Versões : &#x1F605; </h4> 
+    0.1 Criação do site &#x1F970; : Título e subtítulo <br>
+    0.2 Alfabeto e teste de alguns códigos &#x1F913; <br>
+    0.3 Meu nome em 59 idiomas &#x1F914; e adicionei a fonte como normal 20 Arial <br>
+    0.4 Símbolos Espciais de Planetas , Zodíaco e subtítulo.<br>Avisando que futuramente vai mudar, preciso ver como que da espaço, ta anotado em algum lugar kkkkk <br>
+    0.5 Coloquei pro título : família da fonte, tamanho, cor e sombreamento, pra página uma cor de fundo.<br>Alguns comandos não funcionam e o site ta mto lagado <br>
+    0.6 Adicionei cor para Parágrafos, Alinhamento para Parágros e Título, Identação e Pular linha <br>Eu não sei porque a 0.1 e 0.2 estão com um espaçamento enorme se ambas estão com h3 h4 e h5 &#x1F644; <br> Eu removi o excesso de linhas tb<br>
+    0.7 Adionei Emojis &#x1F603; junto com sua categoria, removi os h que estavam fazendo com que o texto tenha um espaço enorme entre os parágrafos,<br>agora o site abre em 150% pois antes estava muito pequeno e também removi alguns p de parágrafo e adicionei mais br pra pular linha <br>
+    <br>
+    Emojis adicionados : <br>
+    -&#x1F603; Rosto sorridente com Olhos Grandes <br>
+    -&#x1F604; Rosto sorridente com Olhos Sorridentes <br>
+    -&#x1F605; Suor Feliz <br>
+    -&#x1F644; Rosto com Olhos Virados <br>
+    -&#x1F913; Rosto Nerd <br>
+    -&#x1F914; Rosto Pensante <br>
+    -&#x1F970; Rosto Apaixonado <br>
+    -
 
+    <br>
     <h11>Símbolos Especiais </h11>
     <p>
-        Planetas : </p>
-        Sol	    &#9737</p>
-	    Mercúrio&#9791</p>
-	    Vênus	&#9792</p>
-	    Terra	&#9793</p>
-	    Marte	&#9794</p>
-	    Júpiter	&#9795</p>
-	    Saturno	&#9796</p>
-	    Urano	&#9797</p>
-      	Netuno	&#9798</p>
-        Plutão	&#9799</p>
+    Planetas : </p>
+    -Sol	    &#9737</p>
+	-Mercúrio&#9791</p>
+	-Vênus	&#9792</p>
+	Terra	&#9793</p>
+	Marte	&#9794</p>
+	Júpiter	&#9795</p>
+	Saturno	&#9796</p>
+	Urano	&#9797</p>
+    Netuno	&#9798</p>
+    Plutão	&#9799</p>
 
-        Zodíaco: </p>
-        Áries	&#9800</p>
-        Touro	&#9801</p>
-    	Gêmeos	&#9802</p>
-	    Câncer	&#9803</p>
-	    Leão	&#9804</p>
-	    Virgem	&#9805</p>
-	    Libra	&#9806</p>
-	    Escorpião	&#9807</p>
-	    Sagitário	&#9808</p>
-	    Capricórnio	&#9809</p>
-        Aquário	&#9811</p>
-	    Peixes	&#9810</p>
+    Zodíaco: </p>
+    Áries	&#9800</p>
+    Touro	&#9801</p>
+    Gêmeos	&#9802</p>
+	Câncer	&#9803</p>
+	Leão	&#9804</p>
+	Virgem	&#9805</p>
+	Libra	&#9806</p>
+	Escorpião	&#9807</p>
+	Sagitário	&#9808</p>
+	Capricórnio	&#9809</p>
+    Aquário	&#9811</p>
+	Peixes	&#9810</p>
 
     <h9>Meu nome em vários idiomas</h9>
 
@@ -77,7 +89,6 @@
     <p>-Canarim : ಡೇನಿಯಲ್ Ḍēniyal
     <p>-Cazaque : Даниэль Danïél
     <p>10-Chinês ( Simples ) : 丹尼尔 Dānní'ěr
-
     <p>11-Chinês ( tradicional ) : 丹尼爾 Dānní'ěr
     <p>-Cingalês : ඩැනියෙල් ḍæniyel
     <p>-Coreano : 다니엘
@@ -88,7 +99,6 @@
     <p>-Haitiano : Danyèl
     <p>-Hauçá : Daniyel
     <p>20-Havaiano : ʻO Daniel
-
     <p>21-Hebraico : דניאל
     <p>-Híndi : डैनियल dainiyal
     <p>-Lídiche : דניאל dnyal
@@ -99,40 +109,36 @@
     <p>-Letão : Daniels
     <p>-Lituano : Danielius
     <p>30-Macedônio : Даниел
-
-    <p>31-Malaiala : ഡാനിയേൽ ḍāniyēl
-    <p>-Malgaxe : Daniela
-    <p>-Maori : Raniera
-    <p>-Marati : डॅनियल Ḍĕniyala
-    <p>35-Mongol : Даниел Daniyel
-    <p>-Nepalês : डानियल Ḍāniyala
-    <p>-Oriá = ଦାନିୟେଲ |
-    <p>-Panjabi = ਡੈਨੀਅਲ Ḍainī'ala
-    <p>-Pashto = دانیل
-    <p>40-Persa = دانیل
-
-    <p>41-Quirguiz = Даниел
-    <p>-Russo = Даниэль
-    <p>-Samoano = Tanielu
--Sérvio = Даниел
-45-Sindi = ڊينئل
--Somali = Daanyeel
--Tadijique = Дониёл Donijol
--Tailandês = แดเนียล Dæ neīy l
--Tâmil = டேனியல் Ṭēṉiyal
-50-Tártaro = Данил
-
-51-Techo = Danieli
--Télugo = డేనియల్ Ḍēniyal
--Ucraniano : Даніель
--Uigur : دانىيال
--Urdu : ڈینیل
-55-Uzbeque : Doniyor
--Xhosa : UDaniel
--Xona : Dhanieri
-108-Zulu : UDaniel
-109 idiomas Pq eu estava
-traduzindo do Português
+    31-Malaiala : ഡാനിയേൽ ḍāniyēl <br>
+    -Malgaxe : Daniela<br>
+    -Maori : Raniera<br>
+    -Marati : डॅनियल Ḍĕniyala<br>
+    35-Mongol : Даниел Daniyel<br>
+    -Nepalês : डानियल Ḍāniyala<br>
+    -Oriá = ଦାନିୟେଲ |<br>
+    -Panjabi = ਡੈਨੀਅਲ Ḍainī'ala<br>
+    -Pashto = دانیل<br>
+    40-Persa = دانیل<br>
+    41-Quirguiz = Даниел<br>
+    -Russo = Даниэль<br>
+    -Samoano = Tanielu<br>
+    -Sérvio = Даниел<br>
+    45-Sindi = ڊينئل<br>
+    -Somali = Daanyeel<br>
+    -Tadijique = Дониёл Donijol<br>
+    -Tailandês = แดเนียล Dæ neīy <br>
+    -Tâmil = டேனியல் Ṭēṉiyal<br>
+    50-Tártaro = Данил<br>
+    51-Techo = Danieli<br>
+    -Télugo = డేనియల్ Ḍēniyal<br>
+    -Ucraniano : Даніель<br>
+    -Uigur : دانىيال<br>
+    -Urdu : ڈینیل<br>
+    55-Uzbeque : Doniyor<br>
+    56-Xhosa : UDaniel<br>
+    57-Xona : Dhanieri<br>
+    58-Zulu : UDaniel<br>
+    59 idiomas Pq eu estava traduzindo do Português<br>
 
     </p>
     <h10>Alfabeto</h10>
