--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!--Vai ocupar 150% ( 0.5) da Tela do PC-->
     <!--Se fosse 1.0 seria 100% -->
     <!--Se fosse 1.5 seria 50%-->
+    <link rel="shortcut icon" href="_imagens/favicon.ico" type="image/x-icon">
+    <!--digitar link e depois escolher opção favicon.ico, colocar o local do ícones em href . Atalho CTRL Espaço -->
+
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -35,12 +38,12 @@
         @font-face {
         /*Aqui eu estou declarando uma regra de fonte no arquivo CSS*/
 
-            @import url('https://fonts.googleapis.com/css2?family=Aladin&display=swap');
-            font-family:'Aladin', cursive;
+            /* @import url('https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf');
+            font-family:'Aladin'; */
 
             font-family: 'aladdin';
             /*Define a fonte que será usada*/
-            src: url('_fonts/aladdin.ttf');
+            src: url('https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf');
             /*Mostra o caminho de onde a fonte está*/
         }
         h1{
