--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
         @font-face {
         /*Aqui eu estou declarando uma regra de fonte no arquivo CSS*/
 
-            /* @import url('https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf');
-            font-family:'Aladin'; */
+            @import url(https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf);
 
             font-family: 'aladdin';
             /*Define a fonte que será usada*/
-            src: url('https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf');
+            src: url('_fonts/aladdin.ttf');
             /*Mostra o caminho de onde a fonte está*/
         }
         h1{
