--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!--Se fosse 1.5 seria 50%-->
     <link rel="shortcut icon" href="_imagens/favicon.ico" type="image/x-icon">
     <!--digitar link e depois escolher opção favicon.ico, colocar o local do ícones em href . Atalho CTRL Espaço -->
+    <link href="https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf" rel="stylesheet"
 
     <nav>
         <ul>
@@ -38,12 +39,10 @@
         @font-face {
         /*Aqui eu estou declarando uma regra de fonte no arquivo CSS*/
 
-            @import url(https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf);
-
             font-family: 'aladdin';
             /*Define a fonte que será usada*/
             src: url('_fonts/aladdin.ttf');
-            /*Mostra o caminho de onde a fonte está*/
+            /*Mostra o caminho de onde a fonte está */
         }
         h1{
         /*Alterações somente no <h1> : */
