--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Vai ocupar 150% ( 0.5) da Tela do PC-->
     <!--Se fosse 1.0 seria 100% -->
     <!--Se fosse 1.5 seria 50%-->
-    <link rel="shortcut icon" href="_imagens/favicon.ico" type="image/x-icon">
+    <link rel="icon" sizes="16x16" href="_imagens/favicon.ico" type="image/png">
     <!--digitar link e depois escolher opção favicon.ico, colocar o local do ícones em href . Atalho CTRL Espaço -->
     <link href="https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf" rel="stylesheet"
 
@@ -42,7 +42,7 @@
             font-family: 'aladdin';
             /*Define a fonte que será usada*/
             src: url('_fonts/aladdin.ttf');
-            /*Mostra o caminho de onde a fonte está */
+            /* Mostra o caminho de onde a fonte está*/
         }
         h1{
         /*Alterações somente no <h1> : */
