--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Vai ocupar 150% ( 0.5) da Tela do PC-->
     <!--Se fosse 1.0 seria 100% -->
     <!--Se fosse 1.5 seria 50%-->
-    <link rel="icon" sizes="16x16" href="_imagens/favicon.ico" type="image/png">
+    <link rel="apple-touch-icon" sizes="32x32" href="_imagens/favicon.ico" type="apple-touch-icon/ico">
     <!--digitar link e depois escolher opção favicon.ico, colocar o local do ícones em href . Atalho CTRL Espaço -->
     <link href="https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf" rel="stylesheet"
 
