--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <!--Vai ocupar 150% ( 0.5) da Tela do PC-->
     <!--Se fosse 1.0 seria 100% -->
     <!--Se fosse 1.5 seria 50%-->
-    <link rel="apple-touch-icon" sizes="32x32" href="_imagens/favicon.ico" type="apple-touch-icon/ico">
+    <link rel="shortcut icon" href="_imagens/favicon.ico" type="image/x-icon">
     <!--digitar link e depois escolher opção favicon.ico, colocar o local do ícones em href . Atalho CTRL Espaço -->
-    <link href="https://github.com/danzinho007/danzinho007.github.io/blob/main/_fonts/aladdin.ttf" rel="stylesheet"
 
     <nav>
         <ul>
@@ -28,45 +27,8 @@
     </nav>
     <title>Meu site</title>
     <!--O que irá aparecer na Aba do Navegador-->
-    <style>
-    /* É o design do site */
-        body{
-    /* Alterações no Corpo do site */
-            background-color: rgb(169, 228, 178)
-            /*Está definindo a cor de fundo do site pra rgb(169, 228, 178) */
-            /*A cor pode ser escrita normalmente ( yellow, green, etc ), hexadecimal ( Ex : #a1d3ef ou a1 é a parte vermelha, d3 parte verde e ef parte azul), rgb(35, 137, 195) , rgba (0,0,0,0) onde o último 0 é transparência pode ser 0 até 1, hsl(M, S%, L%) = MatizSaturaçãoLuminosidade*, hsla ( M, S%, L%, A) onde A é Alpha */
-        }
-        @font-face {
-        /*Aqui eu estou declarando uma regra de fonte no arquivo CSS*/
-
-            font-family: 'aladdin';
-            /*Define a fonte que será usada*/
-            src: url('_fonts/aladdin.ttf');
-            /* Mostra o caminho de onde a fonte está*/
-        }
-        h1{
-        /*Alterações somente no <h1> : */
-            font-family: 'aladdin';
-            /*Define a fonte do h1 como aladdin que foi especificada onde está antes */
-            /*Se eu quiser posso usar as fontes que já vem no programa */
-            /* Site que recomendo é https://www.dafont.com/pt/ */
-            font-size: 50;
-            /*Define o tamanho sendo 100 */
-            color:blue;
-            /*Define a cor para Azul */
-            text-shadow: 3px 3px 3px black;
-            /*Define o sombreamento */
-        }
-        p{
-        /*Alterações em parágrafos <p>*/
-            color: black(0,0,0);
-            /*Define a cor do texto para preto*/
-            text-align: justify;
-            /*Alinhamento justificado = Após o 1° parágrafo o texto irá colocar no lado esquerdo*/
-            text-indent: 20px;
-            /*Define identação = O primeiro parágrafo terá 20 pixels da margem esquerda*/
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    
 </head>
 
 <body>
@@ -74,9 +36,9 @@
     <h1 align="center">Meu site &#x1F604;</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>
     <h3>Futuramente irei colocar tudo em links</h3>
-    <br>
 
     <h4>Histórico de Versões : &#x1F605; </h4> 
+
     <strong>15/01</strong> 0.1 Criação do site &#x1F970; : Título e subtítulo <br>
     <strong>16/01</strong>  0.2 Alfabeto e teste de alguns códigos &#x1F913; <br>
     <strong>17/01</strong>  0.3 Meu nome em 59 idiomas &#x1F914; e adicionei a fonte como normal 20 Arial <br>
@@ -85,7 +47,8 @@
     <strong>20/01</strong>  0.6 Adicionei cor para Parágrafos, Alinhamento para Parágros e Título, Identação e Pular linha <br>Eu não sei porque a 0.1 e 0.2 estão com um espaçamento enorme se ambas estão com h3 h4 e h5 &#x1F644; <br> Eu removi o excesso de linhas tb<br>
     <strong>21/01</strong>  0.7 Adionei Emojis &#x1F603; junto com sua categoria, removi os h que estavam fazendo com que o texto tenha<br> um espaço enorme entre os parágrafos, agora o site abre em 150% pois antes estava muito pequeno e também<br> removi alguns p de parágrafo e adicionei mais br pra pular linha <br>
     <strong>22/01</strong>  0.8 Adicionei comentários, basta apertar F12 e especificar todos clicando nas tags, <strong>adicionei</strong> também os dias<br> que postei as versões, lembrando que eu atualizo 1 dia antes !!! Adicionei a fonte aladdin.ttf, tive que declarar pro css<br> antes e por enquanto é isso <br>
-    <strong>23/01</strong> 0.9 A fonte que coloquei não estava funcionando, então quem quiser terá que baixar ela e por na pasta C>Windows>Fonts <li><a href="https://www.dafont.com/pt/aladdin.font">Fonte do Aladdin</a></li>Coloquei os links na parte de cima do site, <strong>Removi</strong> a tabela lá de baixo e coloquei encima
+    <strong>23/01</strong> 0.9 A fonte que coloquei não estava funcionando, então quem quiser terá que baixar ela e por na pasta C>Windows>Fonts <li><a href="https://www.dafont.com/pt/aladdin.font">Fonte do Aladdin</a></li>Coloquei os links na parte de cima do site, <strong>Removi</strong> a tabela lá de baixo e coloquei encima <br>
+    <strong>24/01</strong> 1.0 Coloquei emoji na aba, porém não está funcionando pra visitantes<br><strong>Adicionei</strong> listas pro caso de Alfabeto<br><strong>Transferi</strong> os estilos CSS pra pasta _css, antes ficava no html, agora a fonte parou de vez
 
     <p>Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto </p>
     <br>
@@ -98,6 +61,86 @@
     -&#x1F914; Rosto Pensante <br>
     -&#x1F970; Rosto Apaixonado <br>
     <br>
+
+<nav>  
+    <h1>Alfabetp</h1>
+        <ol>
+        <!--ol = Lista ordenada : 1,2,3,etc-->
+        <li>Aーあ</li>
+        <li>Bー</li>
+        <li>Cー</li>
+        <li>Dー</li>
+        <li>Eーえ</li>
+        <li>Fー</li>
+        <li></li>
+        <li>Gー</li>
+        <li>Hー</li>
+        <li>Ha</li>
+        <li>He</li>
+        <li>Hi</li>
+        <li>Ho</li>
+        <li>Hu</li>
+        <li>Iーい</li>
+        <li>Jー</li>
+        <li>Kー</li>
+        <li>Ka</li>
+        <li>Ke</li>
+        <li>Ki</li>
+        <li>Ko</li>
+        <li>Ku</li>
+        <li>Lー</li>
+        <li>Mー</li>
+        <li>Ma</li>
+        <li>Me</li>
+        <li>Mi</li>
+        <li>Mo</li>
+        <li>Mu</li>
+        <li>Nーん</li>
+        <li>Na</li>
+        <li>Ne</li>
+        <li>Ni</li>
+        <li>No</li>
+        <li>Nu</li>
+        <li>Oーお</li>
+        <li>Pー</li>
+        <li>Qー</li>
+        <li>Rー</li>
+        <li>Ra</li>
+        <li>Re</li>
+        <li>Ri</li>
+        <li>Ro</li>
+        <li>Ru</li>
+        <li>Sー</li>
+        <li>Sa</li>
+        <li>Se</li>
+        <li>Si</li>
+        <li>So</li>
+        <li>Su</li>
+        <li>Tー</li>
+        <li>Ta</li>
+        <li>Te</li>
+        <li>Ti</li>
+        <li>To</li>
+        <li>Tu</li>
+        <li>Uーう</li>
+        <li>Vー</li>
+        <li>Wー</li>
+        <li>Wa</li>
+        <li>We</li>
+        <li>Wi</li>
+        <li>Wo</li>
+        <li>Wu</li>
+        <li>Xー</li>
+        <li>Yー</li>
+        <li>Ya</li>
+        <li>Ye</li>
+        <li>Yi</li>
+        <li>Yo</li>
+        <li>Yu</li>
+        <li>Zー</li>
+        <li></li>
+    </ol>
+</nav>
 
     <table>
         <tr>
