--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <!--Vai ocupar 150% ( 0.5) da Tela do PC-->
     <!--Se fosse 1.0 seria 100% -->
     <!--Se fosse 1.5 seria 50%-->
-    <link rel="shortcut icon" href="_imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!--digitar link e depois escolher opção favicon.ico, colocar o local do ícones em href . Atalho CTRL Espaço -->
-
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -27,8 +26,7 @@
     </nav>
     <title>Meu site</title>
     <!--O que irá aparecer na Aba do Navegador-->
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
-    
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
@@ -48,7 +46,8 @@
     <strong>21/01</strong>  0.7 Adionei Emojis &#x1F603; junto com sua categoria, removi os h que estavam fazendo com que o texto tenha<br> um espaço enorme entre os parágrafos, agora o site abre em 150% pois antes estava muito pequeno e também<br> removi alguns p de parágrafo e adicionei mais br pra pular linha <br>
     <strong>22/01</strong>  0.8 Adicionei comentários, basta apertar F12 e especificar todos clicando nas tags, <strong>adicionei</strong> também os dias<br> que postei as versões, lembrando que eu atualizo 1 dia antes !!! Adicionei a fonte aladdin.ttf, tive que declarar pro css<br> antes e por enquanto é isso <br>
     <strong>23/01</strong> 0.9 A fonte que coloquei não estava funcionando, então quem quiser terá que baixar ela e por na pasta C>Windows>Fonts <li><a href="https://www.dafont.com/pt/aladdin.font">Fonte do Aladdin</a></li>Coloquei os links na parte de cima do site, <strong>Removi</strong> a tabela lá de baixo e coloquei encima <br>
-    <strong>24/01</strong> 1.0 Coloquei emoji na aba, porém não está funcionando pra visitantes<br><strong>Adicionei</strong> listas pro caso de Alfabeto<br><strong>Transferi</strong> os estilos CSS pra pasta _css, antes ficava no html, agora a fonte parou de vez
+    <strong>24/01</strong> 1.0 Coloquei emoji na aba, porém não está funcionando pra visitantes<br><strong>Adicionei</strong> listas pro caso de Alfabeto<br><strong>Transferi</strong> os estilos CSS pra pasta _css, antes ficava no html, agora a fonte parou de vez<br>
+    <strong>25/01</strong> 1.1 Removi a fonte que estava dando problema, futuramente irei tentar adicionar ela
 
     <p>Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto </p>
     <br>
