--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <!--Se fosse 1.5 seria 50%-->
     <link rel="shortcut icon" href="favicon.ico">
     <!--digitar link e depois escolher opção favicon.ico, colocar o local do ícones em href . Atalho CTRL Espaço -->
+    <title>Meu site</title>
+    <!--O que irá aparecer na Aba do Navegador-->
+    <link rel="stylesheet" href="estilo.css">
+
+</head>
+
+<body>
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -24,18 +31,12 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <title>Meu site</title>
-    <!--O que irá aparecer na Aba do Navegador-->
-    <link rel="stylesheet" href="estilo.css">
-</head>
-
-<body>
-
     <h1 align="center">Meu site &#x1F604;</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>
     <h3>Futuramente irei colocar tudo em links</h3>
 
-    <h4>Histórico de Versões : &#x1F605; </h4> 
+    <h4>Histórico de Versões : &#x1F605;</h4> 
+    <strong><p>OBS : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
 
     <strong>15/01</strong> 0.1 Criação do site &#x1F970; : Título e subtítulo <br>
     <strong>16/01</strong>  0.2 Alfabeto e teste de alguns códigos &#x1F913; <br>
@@ -45,13 +46,22 @@
     <strong>20/01</strong>  0.6 Adicionei cor para Parágrafos, Alinhamento para Parágros e Título, Identação e Pular linha <br>Eu não sei porque a 0.1 e 0.2 estão com um espaçamento enorme se ambas estão com h3 h4 e h5 &#x1F644; <br> Eu removi o excesso de linhas tb<br>
     <strong>21/01</strong>  0.7 Adionei Emojis &#x1F603; junto com sua categoria, removi os h que estavam fazendo com que o texto tenha<br> um espaço enorme entre os parágrafos, agora o site abre em 150% pois antes estava muito pequeno e também<br> removi alguns p de parágrafo e adicionei mais br pra pular linha <br>
     <strong>22/01</strong>  0.8 Adicionei comentários, basta apertar F12 e especificar todos clicando nas tags, <strong>adicionei</strong> também os dias<br> que postei as versões, lembrando que eu atualizo 1 dia antes !!! Adicionei a fonte aladdin.ttf, tive que declarar pro css<br> antes e por enquanto é isso <br>
-    <strong>23/01</strong> 0.9 A fonte que coloquei não estava funcionando, então quem quiser terá que baixar ela e por na pasta C>Windows>Fonts <li><a href="https://www.dafont.com/pt/aladdin.font">Fonte do Aladdin</a></li>Coloquei os links na parte de cima do site, <strong>Removi</strong> a tabela lá de baixo e coloquei encima <br>
+    <strong>23/01</strong> 0.9 A fonte que coloquei não estava funcionando, então quem quiser terá que baixar ela e por na pasta C>Windows>Fonts <li><a href="https://www.dafont.com/pt/aladdin.font" target="_blank">Fonte do Aladdin</a></li><li><a href="https://www.dafont.com/pt/aladdin.font" target="_blank">https://www.dafont.com/pt/aladdin.font</a><br>Coloquei os links na parte de cima do site, <strong>Removi</strong> a tabela lá de baixo e coloquei encima <br>
     <strong>24/01</strong> 1.0 Coloquei emoji na aba, porém não está funcionando pra visitantes<br><strong>Adicionei</strong> listas pro caso de Alfabeto<br><strong>Transferi</strong> os estilos CSS pra pasta _css, antes ficava no html, agora a fonte parou de vez<br>
-    <strong>25/01</strong> 1.1 Removi a fonte que estava dando problema, futuramente irei tentar adicionar ela
+    <strong>25/01</strong> 1.1 Essa versão saiu ontem ( 24/01 ), pois eu consegui resolver o problema da fonte e do favicon ( ícone na aba do navegador ),<br>mas mesmo assim irei resumir o que fiz :<br>
+    -Removi ( não removi de apagar, somente coloquei como comentário ) a fonte que estava dando problema, futuramente irei tentar<br>adicionar ela<br>
+    -Entrei no discord da <a href="https://github.com/GabiiSantana" target="blank">GabiCode</a> e caçando sites de github achei <a href="https://thesun37.github.io/PrometeusProject/" target="blank">esse</a>, dando uma fuçada ( famoso F12 ) vi que o Github não trabalha<br>com pastas, somente com arquivos, ou seja, <br><strong>Não pode linkar pra outras pastas ou links pra carregar tal coisa</strong><br>-Eu tentei linkar a fonte pro meu Github mas não foi, então fica ai a dica<br>
+    -O problema foi resolvido pra vocês visitantes, porém agora o favicon não aparece pra mim &#129313<br>
+    Links citados :<br>
+    <a href="https://github.com/GabiiSantana" target="blank">https://github.com/GabiiSantana</a><br>
+    <a href="https://thesun37.github.io/PrometeusProject/" target="blank">https://thesun37.github.io/PrometeusProject/</a>
+
 
     <p>Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto </p>
     <br>
     <strong>Emojis adicionados</strong> : <br>
+    -&#128531; Rosto Suando Frio = Coloquei mas tirei <br>
+    -&#129313; Cara de Palhaço <br>
     -&#x1F603; Rosto sorridente com Olhos Grandes <br>
     -&#x1F604; Rosto sorridente com Olhos Sorridentes <br>
     -&#x1F605; Suor Feliz <br>
